sidux-art-gnome-gaia (0.0.3) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 19 Sep 2007 16:27:01 +0200

sidux-art-gnome-gaia (0.0.2) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * add VCS control headers.

  [ Bernard Gray ]
  * update sidux-gaia gdm theme so it works 
   - based on debian-moreblue (copyright updated)

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 19 Sep 2007 23:53:34 +1000

sidux-art-gnome-gaia (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Bernard Gray <bernard.gray@gmail.com>  Fri, 06 Jul 2007 16:45:03 +1000